# OpenSlots-lambda

./: .env.example  .gitignore  CONTRIBUTING.md  Readme.md  dev-requirements.txt  pyproject.toml  requirements.txt
docs/: architecture.md  usecases.md
docs/deployment/: 01-aws-account-setup.md  02-install-dependencies.md  03-configure-environment.md  04-deploy-infrastructure.md  05-configure-stripe.md  06-testing.md  07-post-deployment.md  README.md
infrastructure/: dynamodb.py  lambdas.py  main.py
src/: config.py
src/handlers/: availability_handler.py  booking_handler.py  organization_handler.py  payment_handler.py  staff_handler.py
src/models/: booking.py  organization.py  payment.py  service.py  staff.py
src/repositories/: dynamodb_repository.py
src/services/: availability_service.py  booking_service.py  cancellation_service.py  payment_service.py
src/utils/: auth.py  logging.py  response.py  validation.py
tests/unit/: test_availability_service.py  test_booking_service.py  test_cancellation_service.py  test_response.py
